--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/pg": "^8.16.0",
     "concurrently": "^8.2.2",
     "electron": "^28.3.3",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   }
 }
