--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "express": "^5.2.1",
     "pg": "^8.16.3"
   }
