--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
+    "anthropic-ai": "^0.0.10",
     "convertapi": "^1.15.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
