--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "@aws-sdk/client-s3": "^3.958.0",
     "@aws-sdk/s3-request-presigner": "^3.958.0",
     "express": "^5.2.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "subconscious": "^0.2.0"
   }
 }
-
-
-
